--- a/packages/resume-builder/src/components/Acknowledgement/Acknowledgement.module.scss
+++ b/packages/resume-builder/src/components/Acknowledgement/Acknowledgement.module.scss
@@ -6,9 +6,7 @@
   margin-top: 0.8rem;
 }
 
-.continueBtn {
-  margin-top: 3.2rem;
-}
+.continueBtn {}
 
 .buttonsContainer {
   display: flex;
@@ -19,4 +17,45 @@
 
 .laterText {
   margin-top: 1.2rem;
+}
+
+.timelineDot {
+  background-color: $colors-base-blue-1;
+  border-radius: 50%;
+  padding: 0.5rem;
+  color: $colors-base-blue-6;
+  min-height: 2.4rem;
+  min-width: 2.4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.timeline {
+  margin-top: 4rem;
+}
+
+.timeline :global(.ant-timeline-item-tail) {
+  border-inline-start-color: $colors-base-blue-1;
+}
+
+.timeline :global(.ant-timeline-item-head) {
+  padding: 0;
+}
+
+.timelineItem {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: 1.2rem;
+  color: $colors-neutral-text-color-text-secondary;
+  font-weight: 600;
+
+  img {
+    height: 7.8rem;
+  }
+}
+
+.timeline :global(.ant-timeline-item-content) {
+  top: -3rem;
 }
