--- a/packages/resume-builder/src/components/SkillsAndToolkit/SkillsAndToolkit.module.scss
+++ b/packages/resume-builder/src/components/SkillsAndToolkit/SkillsAndToolkit.module.scss
@@ -74,6 +74,7 @@
   border-radius: 16px;
   font-size: 14px;
   transition: all 0.2s;
+  cursor: pointer;
 
   &:hover:not(.selected) {
     background-color: #e6f7ff;
@@ -85,6 +86,8 @@
     background-color: #e6f7ff;
     border-color: #91d5ff;
     color: #1890ff;
+    cursor: not-allowed;
+    opacity: 0.6;
   }
 }
 
