--- a/packages/career-hub/src/components/JobCard/JobCardHeader/JobCardHeader.module.scss
+++ b/packages/career-hub/src/components/JobCard/JobCardHeader/JobCardHeader.module.scss
@@ -38,12 +38,12 @@
 }
 
 .jobTitle {
-  color: $colors-brand-primary-color-primary !important;
+  color: $colors-brand-primary-color-primary;
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
   font-weight: 600;
   font-size: 1.5rem;
   line-height: 1.5;
-  margin-bottom: 0 !important;
+  margin-bottom: 0;
 }
 
 .companyName {
