feat: add dummy api integration for the job tags

--- a/packages/career-hub/src/components/JobsList/JobsList.module.scss
+++ b/packages/career-hub/src/components/JobsList/JobsList.module.scss
@@ -2,3 +2,13 @@
   margin-bottom: 2.4rem;
 }
 
+.spinner {
+  display: block;
+  text-align: center;
+  padding: 2rem;
+}
+
+.alert {
+  margin: 1rem 0;
+}
+
