--- a/packages/components/src/styles/theme.scss
+++ b/packages/components/src/styles/theme.scss
@@ -197,10 +197,10 @@ $colors-neutral-border-color-border-secondary: #f0f0f0;
 $colors-neutral-border-color-split: #0000000f;
 
 // Font Sizes
-$default-font-size: 14;
-$h1-size: 38;
-$h2-size: 30;
-$h3-size: 24;
-$h4-size: 20;
-$h5-size: 16;
-$h6-size: 12;
+$default-font-size: 1.4rem;
+$h1-size: 3.8rem;
+$h2-size: 3rem;
+$h3-size: 2.4rem;
+$h4-size: 2rem;
+$h5-size: 1.6rem;
+$h6-size: 1.2rem;
