--- a/packages/career-hub/src/components/JobsList/JobsList.module.scss
+++ b/packages/career-hub/src/components/JobsList/JobsList.module.scss
@@ -33,5 +33,5 @@
   justify-content: center;
   gap: 0.5rem;
   padding: 1rem;
-  color: #666;
+  color: $colors-neutral-text-color-text-tertiary;
 }
