--- a/packages/career-hub/src/components/JobCard/JobCard.module.scss
+++ b/packages/career-hub/src/components/JobCard/JobCard.module.scss
@@ -5,19 +5,20 @@
   max-width: 100%;
   width: 100%;
   height: auto; // Flex based on content
-  margin-bottom: 1.25rem; // Increased from 1rem
   cursor: pointer;
   transition: all 0.3s ease;
+  border-radius: 0rem;
 
   &:hover:not(.expired) {
     box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.1); // 2px 8px
   }
 
-  &.active {
-    border: 0.125rem solid #006AFF; // 2px
-    background: rgba(0, 106, 255, 0.02);
-    box-shadow: 0 0.25rem 0.75rem rgba(0, 106, 255, 0.15); // 4px 12px
-  }
+    &.active {
+      border-bottom: 1px solid $colors-brand-primary-color-primary-border;
+      border-left: 2px solid $colors-brand-primary-color-primary-border;
+      background: $colors-brand-primary-color-primary-bg;
+      box-shadow: 0 0.25rem 0.75rem rgba(0, 106, 255, 0.15); // 4px 12px
+    }
 
   &.expired {
     opacity: 0.7;
