--- a/packages/career-hub/src/components/ExpandedJobView/ExpandedJobView.module.scss
+++ b/packages/career-hub/src/components/ExpandedJobView/ExpandedJobView.module.scss
@@ -1,13 +1,20 @@
+// TODO: move this to top level
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 .expandedJobView {
+  font-family: 'Inter', sans-serif;
   width: 100%;
   margin-bottom: 2rem;
-
-  // Ant Design Card overrides
-  & :global(.ant-card) {
-    border-radius: 0.8rem;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    margin-bottom: 1.6rem;
-  }
+  display: flex;
+  padding: 3.2rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 3.2rem;
+  align-self: stretch;
+  border-radius: 0.8rem;
+  border: 1px solid $colors-neutral-border-color-border-secondary;
+  background: $colors-neutral-color-bg-base;
 }
 
 .loadingCard {
