--- a/packages/career-hub/src/components/InterviewExperiencesBanner/InterviewExperiencesBanner.module.scss
+++ b/packages/career-hub/src/components/InterviewExperiencesBanner/InterviewExperiencesBanner.module.scss
@@ -1,7 +1,7 @@
 .monitorBanner {
-  border-color: $colors-base-blue-2;
-  background: $colors-base-blue-1;
-  color: $colors-base-blue-5;
+  border-color: $colors-base-geekblue-3;
+  background: $colors-base-geekblue-1;
+  color: $colors-base-geekblue-6;
 }
 
 .monitorIcon {
