--- a/packages/career-hub/src/layouts/JobsLayout/JobsLayout.module.scss
+++ b/packages/career-hub/src/layouts/JobsLayout/JobsLayout.module.scss
@@ -15,11 +15,11 @@
 }
 
 .sider {
-  background-color: $colors-neutral-color-bg-base;
+  background: transparent;
 }
 
 .layout {
-  background-color: $colors-neutral-color-muted-white;
+  background: transparent;
   margin: 0 8rem;
   margin-top: 3.2rem; 
 }
