feat: inegrate all changes now

--- a/packages/career-hub/src/components/JobsList/JobsList.module.scss
+++ b/packages/career-hub/src/components/JobsList/JobsList.module.scss
@@ -35,3 +35,8 @@
   padding: 1rem;
   color: $colors-neutral-text-color-text-tertiary;
 }
+
+.jobsList {
+  max-height: calc(100vh - 9.6rem);
+  overflow-y: auto;
+}
