--- a/packages/career-hub/src/components/ProfileDetails/ProfileDetails.module.scss
+++ b/packages/career-hub/src/components/ProfileDetails/ProfileDetails.module.scss
@@ -6,12 +6,11 @@
   display: flex;
   flex-direction: column;
   padding: 1.2rem 1.6rem;
-  position: sticky;
-  top: 9.6rem;
+  // position: sticky;
+  // top: 9.6rem;
   background-color: $colors-neutral-color-bg-base;
-  min-height: calc(100vh - 9.6rem);
+  // min-height: calc(100vh - 9.6rem);
 }
-
 
 .profileDetailsItems {
   margin-top: 0.8rem;
