feat: fix css and other api fetching issues

--- a/packages/career-hub/src/layouts/JobsLayout/JobsLayout.module.scss
+++ b/packages/career-hub/src/layouts/JobsLayout/JobsLayout.module.scss
@@ -10,7 +10,7 @@
 .header {
   background-color: $colors-neutral-color-bg-base;
   position: sticky;
-  top: 0;
+  top: 7rem;
   z-index: 100;
   padding: 0 8rem;
 }
