--- a/packages/career-hub/src/components/CollapsableHTML/CollapsableHTML.module.scss
+++ b/packages/career-hub/src/components/CollapsableHTML/CollapsableHTML.module.scss
@@ -23,7 +23,7 @@
   cursor: pointer;
   position: absolute;
   right: 0;
-  bottom: 0;
+  bottom: -1.6rem;
   background-color: $colors-neutral-color-white !important;
   padding-left: 1rem !important;
 }
