--- a/packages/career-hub/src/components/JobDescriptionTab/JobDescriptionTab.module.scss
+++ b/packages/career-hub/src/components/JobDescriptionTab/JobDescriptionTab.module.scss
@@ -13,6 +13,7 @@
   color: $colors-neutral-text-color-text-secondary;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 0.4rem;
 }
 
 .descriptionText {
