--- a/packages/career-hub/src/components/job_application_form/SuccessScreen/SuccessScreen.module.scss
+++ b/packages/career-hub/src/components/job_application_form/SuccessScreen/SuccessScreen.module.scss
@@ -1,4 +1,8 @@
 .container {
+  background: url('https://d2beiqkhq929f0.cloudfront.net/public_assets/assets/000/171/647/original/387c50b753bb7c9556ef775492a9ee9d6a82f5eb.gif?1766480205');
+  background-size: 30rem;
+  background-position: center;
+  background-repeat: no-repeat;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
