--- a/packages/career-hub/src/components/JobDescriptionTab/JobDescriptionTab.module.scss
+++ b/packages/career-hub/src/components/JobDescriptionTab/JobDescriptionTab.module.scss
@@ -16,7 +16,7 @@
   margin-bottom: 0.4rem;
 }
 
-.descriptionText {
+.descriptionText, .stepText {
   color: $colors-neutral-text-color-text-secondary;
 
   p {
@@ -43,6 +43,21 @@
 
 .steps {
   width: 100%;
+
+  :global(.ant-steps-item-content) {
+    text-align: left !important;
+  }
+}
+
+.stepTitle {
+  font-size: 1.6rem;
+  color: $colors-neutral-text-color-text-secondary;
+  margin-bottom: 0.4rem;
+}
+
+.stepText {
+  font-size: 1.4rem;
+  color: $colors-neutral-text-color-text-tertiary;
 }
 
 .descriptionContainer {
@@ -53,4 +68,29 @@
 .container {
   gap: 3rem;
   width: 100%;
+}
+
+.indicatorContainer {
+  width: 100%;
+  position: relative;
+}
+
+.indicatorLine {
+  width: 100%;
+  height: 0.3rem;
+  background-color: #0000000f;
+  position: absolute;
+  top: 0.35rem;
+}
+
+.indicatorDot, .extraIndicatorDot {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: $colors-neutral-text-color-text-quaternary;
+}
+
+.extraIndicatorDot {
+  position: absolute;
+  right: 0;
 }
