--- a/packages/career-hub/src/layouts/JobsLayout/JobsLayout.module.scss
+++ b/packages/career-hub/src/layouts/JobsLayout/JobsLayout.module.scss
@@ -5,6 +5,7 @@
   background-color: $colors-neutral-color-white;
   margin-right: 2rem;
   max-height: calc(100vh - 9.6rem);
+  border-radius: 0.8rem;
 }
 
 .header {
