--- a/packages/career-hub/src/components/JobCard/EligibilityTag/EligibilityTag.module.scss
+++ b/packages/career-hub/src/components/JobCard/EligibilityTag/EligibilityTag.module.scss
@@ -5,6 +5,7 @@
   border-radius: 0.25rem;
   display: inline-flex;
   align-items: center;
-  gap: 0.375rem;
+  gap: 0.1rem;
+  margin-right: 0;
 }
 
