--- a/packages/career-hub/src/components/JobsList/JobsList.module.scss
+++ b/packages/career-hub/src/components/JobsList/JobsList.module.scss
@@ -39,6 +39,7 @@
 .jobsList {
   max-height: calc(100vh - 9.6rem);
   overflow-y: auto;
+  padding: 0 2.4rem 2.4rem 2.4rem;
 }
 
 .noJobsContainer {
