feat: resume fitment

--- a/packages/career-hub/src/components/job_application_form/ResumeChoiceSelect/ResumeChoiceSelect.module.scss
+++ b/packages/career-hub/src/components/job_application_form/ResumeChoiceSelect/ResumeChoiceSelect.module.scss
@@ -63,3 +63,10 @@
   background: $colors-neutral-bg-color-bg-layout;
   justify-content: center;
 }
+
+.fitmentScoreTitle {
+  font-size: $h6-size;
+  color: $colors-neutral-text-color-text-secondary;
+  font-weight: 600;
+  line-height: 2rem;
+}
