--- a/packages/career-hub/src/components/job_application_form/ResumeFitmentCheck/ResumeFitmentCheck.module.scss
+++ b/packages/career-hub/src/components/job_application_form/ResumeFitmentCheck/ResumeFitmentCheck.module.scss
@@ -19,3 +19,53 @@
   color: $colors-neutral-text-color-text;
   max-width: 45rem;
 }
+
+.iconContainer {
+  position: relative;
+  background: url('https://d2beiqkhq929f0.cloudfront.net/public_assets/assets/000/172/585/original/Icon.svg?1767685272');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 7.2rem;
+  height: 7.2rem;
+  animation: pulse 3s linear infinite;
+}
+
+.iconScannerLine {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0.3rem;
+  background: linear-gradient(90deg, transparent 0%, rgba(59, 130, 246, 0.3) 20%, rgb(59, 130, 246) 50%, rgba(59, 130, 246, 0.3) 80%, transparent 100%);
+  box-shadow: rgba(59, 130, 246, 0.8) 0px 0px 20px, rgba(59, 130, 246, 0.4) 0px 0px 40px;
+  animation: scan 4s linear infinite;
+}
+
+@keyframes scan {
+  0% {
+    transform: translateY(0) scaleY(1.2);
+  }
+
+  50% {
+    transform: translateY(6rem) scaleY(1.2);
+  }
+
+  100% {
+    transform: translateY(0) scaleY(1.2);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(-1rem);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
