--- a/packages/career-hub/src/components/job_application_form/Footer/Footer.module.scss
+++ b/packages/career-hub/src/components/job_application_form/Footer/Footer.module.scss
@@ -1,9 +1,11 @@
 .applicationFormFooterContainer {
   display: flex;
   justify-content: flex-end;
+  padding-top: 0.8rem;
 }
 
 .resumeChoiceSelectFooterContainer {
   display: flex;
   justify-content: space-between;
+  padding-top: 0.8rem;
 }
