--- a/packages/career-hub/src/components/JobsList/JobsList.module.scss
+++ b/packages/career-hub/src/components/JobsList/JobsList.module.scss
@@ -37,9 +37,9 @@
 }
 
 .jobsList {
-  max-height: calc(100vh - 9.6rem);
+  max-height: calc(100vh - 34rem);
   overflow-y: auto;
-  padding: 0 2.4rem 2.4rem 2.4rem;
+  padding: 0 2.4rem;
 }
 
 .noJobsContainer {
