--- a/packages/career-hub/src/layouts/JobsLayout/JobsLayout.module.scss
+++ b/packages/career-hub/src/layouts/JobsLayout/JobsLayout.module.scss
@@ -1,10 +1,10 @@
 // JobsLayout styles
 .content {
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
+  max-height: calc(100vh - 20rem);
   background-color: $colors-neutral-color-white;
   margin-right: 2rem;
-  max-height: calc(100vh - 9.6rem);
   border-radius: 0.8rem;
 }
 
