--- a/packages/career-hub/src/components/job_application_form/ResumeFitmentChecklist/ResumeFitmentChecklist.module.scss
+++ b/packages/career-hub/src/components/job_application_form/ResumeFitmentChecklist/ResumeFitmentChecklist.module.scss
@@ -19,3 +19,10 @@
   font-weight: 600;
   color: $colors-neutral-text-color-text-secondary;
 }
+
+.checkbox {
+  & > :global(span.ant-checkbox ) {
+    align-self: flex-start;
+    margin-top: 0.6rem;
+  }
+}
