--- a/packages/career-hub/src/components/job_application_form/ResumeFitmentChecklist/ResumeFitmentChecklist.module.scss
+++ b/packages/career-hub/src/components/job_application_form/ResumeFitmentChecklist/ResumeFitmentChecklist.module.scss
@@ -3,6 +3,8 @@
 
   :global(.ant-notification-notice-description) {
     margin-inline-start: 0 !important;
+    max-height: 35rem;
+    overflow-y: auto;
   }
 }
 
